Refactor OpenAPI schemas; add Vacuum linter to GitHub Actions; propagate SecurityContext to the @Async methods; upgrade dependency versions
